ehibasics replaced by own code pom's adapted warnings reduced Cosmetics