@@ -16,7 +16,6 @@ package org.tcotool.application;
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
-import ch.ehi.basics.i18n.ResourceBundle;
 import ch.softenvironment.client.ResourceManager;
 import ch.softenvironment.jomm.DbObjectServer;
 import ch.softenvironment.jomm.mvc.controller.ConsistencyController;
@@ -27,12 +26,13 @@ import ch.softenvironment.util.AmountFormat;
 import ch.softenvironment.util.StringUtils;
 import ch.softenvironment.view.swingext.JComboBoxUtility;
 import ch.softenvironment.view.tree.TreeSelectionDialog;
-import java.util.Iterator;
 import org.tcotool.model.Currency;
 import org.tcotool.model.Dependency;
 import org.tcotool.model.Service;
 import org.tcotool.model.TcoObject;
 import org.tcotool.tools.ModelUtility;
+
+import java.util.Iterator;
 
 /**
  * DetailView of a Dependency between 2 TcoObject's. The client depends on supplier by a distribution in %.
@@ -41,7 +41,7 @@ import org.tcotool.tools.ModelUtility;
  */
 
 public class DependencyDetailView extends ch.softenvironment.jomm.mvc.view.DbBaseFrame implements ch.softenvironment.view.DetailView,
-    java.beans.PropertyChangeListener {
+        java.beans.PropertyChangeListener {
 
     private ch.softenvironment.view.DetailView caller = null;
     private TcoObject supplier = null;
@@ -267,7 +267,7 @@ public class DependencyDetailView extends ch.softenvironment.jomm.mvc.view.DbBas
             getTxtSupplierName().setText(null);
             getTxtSupplierCost().setText(null);
             getTxtClientCost().setText(null);
-            getObject().setDistribution(new Double(0.0));
+            getObject().setDistribution(Double.valueOf(0.0));
             getSliClient().setValue(0);
             getTxtSupplierCostDistribution().setBackground(java.awt.Color.white);
         } else {
@@ -435,7 +435,7 @@ public class DependencyDetailView extends ch.softenvironment.jomm.mvc.view.DbBas
     private void connPtoP1SetSource() {
         /* Set the source from the target */
         try {
-            if (ivjConnPtoP1Aligning == false) {
+            if (!ivjConnPtoP1Aligning) {
                 // user code begin {1}
                 // user code end
                 ivjConnPtoP1Aligning = true;
@@ -461,7 +461,7 @@ public class DependencyDetailView extends ch.softenvironment.jomm.mvc.view.DbBas
     private void connPtoP1SetTarget() {
         /* Set the target from the source */
         try {
-            if (ivjConnPtoP1Aligning == false) {
+            if (!ivjConnPtoP1Aligning) {
                 // user code begin {1}
                 // user code end
                 ivjConnPtoP1Aligning = true;
@@ -487,7 +487,7 @@ public class DependencyDetailView extends ch.softenvironment.jomm.mvc.view.DbBas
     private void connPtoP2SetSource() {
         /* Set the source from the target */
         try {
-            if (ivjConnPtoP2Aligning == false) {
+            if (!ivjConnPtoP2Aligning) {
                 // user code begin {1}
                 // user code end
                 ivjConnPtoP2Aligning = true;
@@ -513,7 +513,7 @@ public class DependencyDetailView extends ch.softenvironment.jomm.mvc.view.DbBas
     private void connPtoP2SetTarget() {
         /* Set the target from the source */
         try {
-            if (ivjConnPtoP2Aligning == false) {
+            if (!ivjConnPtoP2Aligning) {
                 // user code begin {1}
                 // user code end
                 ivjConnPtoP2Aligning = true;
@@ -539,7 +539,7 @@ public class DependencyDetailView extends ch.softenvironment.jomm.mvc.view.DbBas
     private void connPtoP3SetSource() {
         /* Set the source from the target */
         try {
-            if (ivjConnPtoP3Aligning == false) {
+            if (!ivjConnPtoP3Aligning) {
                 // user code begin {1}
                 // user code end
                 ivjConnPtoP3Aligning = true;
@@ -565,7 +565,7 @@ public class DependencyDetailView extends ch.softenvironment.jomm.mvc.view.DbBas
     private void connPtoP3SetTarget() {
         /* Set the target from the source */
         try {
-            if (ivjConnPtoP3Aligning == false) {
+            if (!ivjConnPtoP3Aligning) {
                 // user code begin {1}
                 // user code end
                 ivjConnPtoP3Aligning = true;
@@ -591,12 +591,12 @@ public class DependencyDetailView extends ch.softenvironment.jomm.mvc.view.DbBas
     private void connPtoP4SetSource() {
         /* Set the source from the target */
         try {
-            if (ivjConnPtoP4Aligning == false) {
+            if (!ivjConnPtoP4Aligning) {
                 // user code begin {1}
                 // user code end
                 ivjConnPtoP4Aligning = true;
                 if ((getObject() != null)) {
-                    getObject().setVariant(new java.lang.Boolean(getChxVariant().isSelected()));
+                    getObject().setVariant(Boolean.valueOf(getChxVariant().isSelected()));
                 }
                 // user code begin {2}
                 // user code end
@@ -617,7 +617,7 @@ public class DependencyDetailView extends ch.softenvironment.jomm.mvc.view.DbBas
     private void connPtoP4SetTarget() {
         /* Set the target from the source */
         try {
-            if (ivjConnPtoP4Aligning == false) {
+            if (!ivjConnPtoP4Aligning) {
                 // user code begin {1}
                 // user code end
                 ivjConnPtoP4Aligning = true;
@@ -643,12 +643,12 @@ public class DependencyDetailView extends ch.softenvironment.jomm.mvc.view.DbBas
     private void connPtoP5SetSource() {
         /* Set the source from the target */
         try {
-            if (ivjConnPtoP5Aligning == false) {
+            if (!ivjConnPtoP5Aligning) {
                 // user code begin {1}
                 // user code end
                 ivjConnPtoP5Aligning = true;
                 if ((getObject() != null)) {
-                    getObject().setDistribution(new java.lang.Double(getTxtClientDistribution().getText()));
+                    getObject().setDistribution(Double.valueOf(getTxtClientDistribution().getText()));
                 }
                 // user code begin {2}
                 // user code end
@@ -669,7 +669,7 @@ public class DependencyDetailView extends ch.softenvironment.jomm.mvc.view.DbBas
     private void connPtoP5SetTarget() {
         /* Set the target from the source */
         try {
-            if (ivjConnPtoP5Aligning == false) {
+            if (!ivjConnPtoP5Aligning) {
                 // user code begin {1}
                 // user code end
                 ivjConnPtoP5Aligning = true;
@@ -695,7 +695,7 @@ public class DependencyDetailView extends ch.softenvironment.jomm.mvc.view.DbBas
     private void connPtoP6SetSource() {
         /* Set the source from the target */
         try {
-            if (ivjConnPtoP6Aligning == false) {
+            if (!ivjConnPtoP6Aligning) {
                 // user code begin {1}
                 // user code end
                 ivjConnPtoP6Aligning = true;
@@ -721,7 +721,7 @@ public class DependencyDetailView extends ch.softenvironment.jomm.mvc.view.DbBas
     private void connPtoP6SetTarget() {
         /* Set the target from the source */
         try {
-            if (ivjConnPtoP6Aligning == false) {
+            if (!ivjConnPtoP6Aligning) {
                 // user code begin {1}
                 // user code end
                 ivjConnPtoP6Aligning = true;
@@ -1601,7 +1601,7 @@ public class DependencyDetailView extends ch.softenvironment.jomm.mvc.view.DbBas
     /**
      * Initializes connections
      *
-     * @throws java.lang.Exception The exception description.
+     *
      */
     /* WARNING: THIS METHOD WILL BE REGENERATED. */
     private void initConnections() {
@@ -1644,7 +1644,7 @@ public class DependencyDetailView extends ch.softenvironment.jomm.mvc.view.DbBas
         }
         // user code begin {2}
         setTitle(getResourceString("FrmWindow_text"));
-        setIconImage(ResourceBundle.getImageIcon(ModelUtility.class, "Dependency.png").getImage());
+        setIconImage(ResourceManager.getImageIcon(ModelUtility.class, "Dependency.png").getImage());
         setConsistencyController(new ch.softenvironment.jomm.mvc.controller.ConsistencyController(this));
         getPnlStandardToolbar().adaptRights(getViewOptions().getViewManager().getRights(Dependency.class));
         getPnlStandardToolbar().setObjects(getObjects());
